--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,17 +4,21 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
 
 .light{
     background-color: $gray-200;
-    color: $gray-800
+    color: $gray-800;
 }
 
 .dark{
     background-color: $gray-800;
-    color: $gray-200
+    color: $gray-200;
+}
+
+.app-body{
+    display: flex;
+    flex-grow: 1;
+    width: 100%;
 }
