--- a/src/components/ThemeToggle/ThemeToggle.scss
+++ b/src/components/ThemeToggle/ThemeToggle.scss
@@ -19,11 +19,41 @@
     }
 }
 
-.custom-classname .react-toggle--checked .react-toggle-track {
-    background-color: $gray-900;
+//Unchecked BG
+.react-toggle-track{
+    background-color: black;
+
+    .light & {
+        border: 2px solid black;
+    }
+
+    .dark & {
+        border: 2px solid white;
+    }
 }
 
-.react-toggle-thumb:focus, .react-toggle--focus{
+// Hover on Unchecked
+.react-toggle:hover:not(.react-toggle--disabled) .react-toggle-track {
+    background-color: $gray-700;
+}
+
+//Checked BG
+.react-toggle--checked .react-toggle-track {
+    background-color: $yellow-400;
+}
+
+
+//Hover on Checked
+.react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track {
+    background-color: $yellow-500;
+}
+
+// Thumb Outline
+.react-toggle--focus .react-toggle-thumb{
     outline: none;
     box-shadow: none;
+}
+
+.react-toggle--checked .react-toggle-thumb {
+    border: 1px solid black;
 }
