Worked on Responsiveness & Media Queries

--- a/src/assets/styles/_customColors.scss
+++ b/src/assets/styles/_customColors.scss
@@ -1,2 +1,20 @@
+// Shell Colors
 $shell-red: #DD1D21;
 $shell-yellow: #FBCE07;
+
+// Light Theme
+$light-theme-bg: $gray-200;
+$light-theme-text: $gray-800;
+$light-theme-darker-bg: $gray-300;
+$light-theme-lighter-bg: $gray-100;
+$light-theme-border: $gray-600;
+$light-theme-shadow: $gray-400;
+
+
+// Dark Theme
+$dark-theme-bg: $gray-800;
+$dark-theme-text: $gray-200;
+$dark-theme-darker-bg: $gray-900;
+$dark-theme-lighter-bg: $gray-700;
+$dark-theme-border: $black;
+$dark-theme-shadow: $gray-900;
