--- a/src/components/ToolBar/ToolBar.scss
+++ b/src/components/ToolBar/ToolBar.scss
@@ -1,18 +1,19 @@
 @import "~bootstrap/scss/bootstrap";
+@import "../../assets/styles/customColors";
 
 .light{
     .toolbar{
-        background-color: $gray-300;
-        border-bottom: 2px solid $gray-500;
-        box-shadow: 0 4px 4px -4px $gray-400;
+        background-color: $light-theme-darker-bg;
+        border-bottom: 2px solid $light-theme-border;
+        box-shadow: 0 4px 4px -4px $light-theme-shadow;
     }
 }
 
 .dark{
     .toolbar{
-        background-color: $gray-900;
-        border-bottom: 2px solid black;
-        box-shadow: 0 4px 4px -4px $gray-700;
+        background-color: $dark-theme-darker-bg;
+        border-bottom: 2px solid $dark-theme-border;
+        box-shadow: 0 4px 4px -4px $dark-theme-shadow;
     }
 }
 
@@ -22,6 +23,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-shrink: 0;
 }
 
 .shell-logo-container{
