--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,24 +1,27 @@
 @import "~bootstrap/scss/bootstrap";
+@import "../assets/styles/customColors";
 
-.App{
+.App {
     height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
 }
 
-.light{
-    background-color: $gray-200;
-    color: $gray-800;
+.light {
+    background-color: $light-theme-bg;
+    color: $light-theme-text;
 }
 
-.dark{
-    background-color: $gray-800;
-    color: $gray-200;
+.dark {
+    background-color: $dark-theme-bg;
+    color: $dark-theme-text;
 }
 
-.app-body{
+.app-body {
     display: flex;
     flex-grow: 1;
     width: 100%;
+    flex-direction: column;
+    overflow: hidden
 }
