--- a/src/components/ThemeToggle/ThemeToggle.scss
+++ b/src/components/ThemeToggle/ThemeToggle.scss
@@ -10,11 +10,12 @@
     &-sun{
         height: 18px;
         margin-top: -4px;
-        margin-left: -4px;
+        margin-left: -2px;
     }
 
     &-moon{
         height: 15px;
+        margin-left: -2px;
         margin-top: -2px;
     }
 }
@@ -39,13 +40,13 @@
 
 //Checked BG
 .react-toggle--checked .react-toggle-track {
-    background-color: $yellow-400;
+    background-color: $gray-100;
 }
 
 
 //Hover on Checked
 .react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track {
-    background-color: $yellow-500;
+    background-color: $gray-300;
 }
 
 // Thumb Outline
@@ -54,6 +55,8 @@
     box-shadow: none;
 }
 
+// Thumb checked
 .react-toggle--checked .react-toggle-thumb {
-    border: 1px solid black;
+    border: 1px solid white;
+    background-color: black;
 }
