Added more media styling

--- a/src/components/ScrollPage/ScrollPage.scss
+++ b/src/components/ScrollPage/ScrollPage.scss
@@ -12,7 +12,7 @@
 
 .body-title-container{
     position: sticky;
-    top: 0px;
+    top: -1px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,13 +35,28 @@
     }
 }
 
-.react-ts-logo{
-    width: 200px;
+
+// Media Queries
+
+@media (orientation: landscape) {
+    .body-title{
+        font-size: 25px;
+    }
+    .react-ts-logo{
+        width: 200px;
+    }
 }
 
-.body-title{
-    font-size: 30px;
+@media (orientation: portrait) {
+    .body-title{
+        font-size: 18px;
+    }
+    .react-ts-logo{
+        width: 100px;
+    }
 }
+
+
 
 .cartoon-cards{
     margin-top: calc(45vh - 82px);
