--- a/src/components/ScrollPage/ScrollPage.scss
+++ b/src/components/ScrollPage/ScrollPage.scss
@@ -11,8 +11,6 @@
 }
 
 .body-title-container{
-    position: sticky;
-    top: -1px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,14 +22,22 @@
 }
 
 .light{
-    .body-title-container{
+    .body-title-container, .cartoon-body-header{
         background-color: $light-theme-bg;
+    }
+
+    .cartoon-body-header{
+        border-bottom: 1px solid $light-theme-border;
     }
 }
 
 .dark{
-    .body-title-container{
+    .body-title-container, .cartoon-body-header{
         background-color: $dark-theme-bg;
+    }
+
+    .cartoon-body-header{
+        border-bottom: 1px solid $dark-theme-border;
     }
 }
 
@@ -56,10 +62,17 @@
     }
 }
 
-
+.cartoon-body-header{
+    margin-top: calc(45vh - 82px);
+    position: sticky;
+    top: 0px;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+    z-index: 2;
+}
 
 .cartoon-cards{
-    margin-top: calc(45vh - 82px);
     display: flex;
     width: 100%;
     flex-direction: column;
