--- a/src/components/ScrollPage/ScrollPage.scss
+++ b/src/components/ScrollPage/ScrollPage.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     flex-wrap: nowrap;
     overflow-y: auto;
+    overflow-x: hidden;
     align-items: center;
 }
 
@@ -71,14 +72,6 @@
     text-align: center;
     z-index: 2;
 }
-
-.cartoon-cards{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-}
-
 
 //Scroll Bar CSS
 
