Added Support for taller phones

--- a/src/components/CartoonCard/CartoonCard.scss
+++ b/src/components/CartoonCard/CartoonCard.scss
@@ -82,10 +82,10 @@
     .cartoon{
 
         // Blur Other cards on Hover of 1 card
-        &-cards:hover &-card:not(:hover){
-            filter: blur(2px);
-            transition: filter 0.2s 0s;
-        }
+        // &-cards:hover &-card:not(:hover){
+        //     filter: blur(2px);
+        //     transition: filter 0.2s 0s;
+        // }
 
         &-card{
             flex-direction: row;
