--- a/src/components/ScrollPage/ScrollPage.scss
+++ b/src/components/ScrollPage/ScrollPage.scss
@@ -19,7 +19,6 @@
     width: 100%;
     height: 100%;
     padding: 20px;
-    margin-top: calc(45vh - 82px);
 }
 
 .light{
@@ -52,21 +51,31 @@
     .react-ts-logo{
         width: 200px;
     }
+
+    .body-title-container, .cartoon-body-header{
+        margin-top: calc(45vh - 82px);
+    }
 }
 
 @media (orientation: portrait) {
+
     .body-title{
         font-size: 18px;
     }
+
     .react-ts-logo{
         width: 100px;
+    }
+
+    .body-title-container, .cartoon-body-header{
+        margin-top: calc(45vh - 67px);
     }
 }
 
 .cartoon-body-header{
     margin-top: calc(45vh - 82px);
     position: sticky;
-    top: 0px;
+    top: -2px;
     width: 100%;
     padding: 20px;
     text-align: center;
